# json_to_python

./: .gitignore  README.md  formaters.py  main.py  parser.py  pyproject.toml  requirements.txt
examples/: example1.json  guichet_unique.json
tests/: test_fragments.py
